Update Raymond G Feilner Jr - Resume.html

--- a/Raymond G Feilner Jr - Resume.html
+++ b/Raymond G Feilner Jr - Resume.html
@@ -11,90 +11,83 @@
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Technical Resume"/>
 		<link rel="icon" href="icon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
-
+		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, Data Scientist, Data Analyst, Web Developer, Web Designer, Full-stack, Quantitative Psychologist, Python, R, HTML, CSS, JavaScript, Ada, C, PHP, Perl, Ruby on Rails, Database Management, Educator, Author">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
-
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<link href="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/themes/base/jquery-ui.css" rel="stylesheet" type="text/css"/>
-		<script src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js"></script>
-		<script src="http://ajax.googleapis.com/ajax/libs/jqueryui/1.8/jquery-ui.min.js"></script>
-
-		<script src="main.js"></script>
-
+		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
+		<!--<script src="main.js"></script>-->
 	</head>
-     <body>
+	<body>
+		<!-- Name Logo -->
 		 <section id="header">
 			 <!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			 <span id="name_logo" class="logo">
 				 <img src="Raymond Feilner - Logo-5.png" alt="Raymond G. Feilner, Jr.">
 			 </span>
 		 </section>
-
-	<section class="icon_menu">
-		<a id="home" class="menu_icon" href="index.html">
-			<img src="home.png" alt="Homepage">
-		</a>
-		<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
-			<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
-		</a>
-		<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
-			<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
-		</a>
-		<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
-			<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
-		</a>
-		<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
-			<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
-		</a>
-		<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
-			<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
-		</a>
-		<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
-			<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
-		</a>
-		<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
-			<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
-		</a>
-	</section>
-
-		 <section id="objective">I help people apply evidence-based practices to ask structured questions. Then, I gather proper evidence. I evaluate the data, using appropriate computational and statistical tools. I effectively interpret and communicate those results. I apply those results into practice in a manner customized to the unique problem. I utilize subsequent feedback to improve or maintain those interventions. In doing so, I aim to effectively manage, improve, and further integrate our systems of technological, social, and cognitive tools. </section>
-		 <section id="professional">
-			 <h2 class="header">Professional Background</h2>
-			 <div class="subsection">
-				 <h3 class="main_item">Data Analyst, Full-stack Web Developer, Graphic Designer</h3>
-				 <span class="submain">Portenzo</span>
-				 <span class="date">
-					 <span class="start_date">March 2012</span>
-					 <span> - </span>
-					 <span class="end_date">May 2015</span>
-				 </span>
-				 <ul>
-					 <li class="bulleted">Increased online sales over 1200% using interactive custom product builders and responsive web design</li>
-					 <li class="bulleted">Improved production efficiency by more than 50% by analyzing production and logistics data</li>
-					 <li class="bulleted">Mined data from orders for statistical analyses, sales forecasting, and preparing reports for production, marketing, and sales staff</li>
-					 <li class="bulleted">Developed interactive websites to display data and other information, using JavaScript, jQuery, Ruby on Rails, HTML, CSS</li>
-					 <li class="bulleted">Created relational databases using Ruby on Rails and SQL, ensured security of information, provided information to stakeholders </li>
-					 <li class="bulleted">Engaged in database management, Search Engine Optimization (SEO), and website traffic analyses</li>
-					 <li class="bulleted">Prepared graphics for advertisements, product images, interactive custom product builders, using Adobe Photoshop, Illustrator</li>
-				 </ul>
-			 </div>
-			 <div class="subsection">
-				 <h3 class="main_item">Project Coordinator</h3>
-				 <span class="submain">A.T. Still University – Kirksville College of Osteopathic Medicine</span>
-				 <span class="date">
-					 <span class="start_date">May 2007</span>
-					 <span> - </span>
-					 <span class="end_date">July 2008</span>
-				 </span>
-				 <ul>
-					 <li class="bulleted">Produced statistical model, conducted various educational assessments, and ensured inter-rater reliability for use by administrators</li>
-					 <li class="bulleted">Helped meet and exceed grant objectives by creating evidence-based medicine website and instructional materials</li>
-					 <li class="bulleted">Performed database management using SQL for achievement-based, pedagogical, and survey data from various sources</li>
-					 <li class="bulleted">Organized educational workshops on evidence-based medicine for students and faculty, handling administrative requirements</li>
-				 </ul>
-			 </div>
-			 <div class="subsection">
+		<!-- Icon Menu -->
+		<section class="icon_menu">
+			<a id="home" class="menu_icon" href="index.html">
+				<img src="home.png" alt="Homepage">
+			</a>
+			<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
+				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+			</a>
+			<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
+				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
+			</a>
+			<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
+				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
+			</a>
+			<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
+				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+			</a>
+			<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
+				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+			</a>
+			<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
+				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+			</a>
+			<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
+				<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+			</a>
+		</section>
+		<section id="objective">I help people apply evidence-based practices to ask structured questions. Then, I gather proper evidence. I evaluate the data, using appropriate computational and statistical tools. I effectively interpret and communicate those results. I apply those results into practice in a manner customized to the unique problem. I utilize subsequent feedback to improve or maintain those interventions. In doing so, I aim to effectively manage, improve, and further integrate our systems of technological, social, and cognitive tools. </section>
+		<section id="professional">
+			<h2 class="header">Professional Background</h2>
+			<div class="subsection">
+				<h3 class="main_item">Data Analyst, Full-stack Web Developer, Graphic Designer</h3>
+				<span class="submain">Portenzo</span>
+				<span class="date">
+					<span class="start_date">March 2012</span>
+					<span> - </span>
+					<span class="end_date">May 2015</span>
+				</span>
+				<ul>
+					<li class="bulleted">Increased online sales over 1200% using interactive custom product builders and responsive web design</li>
+					<li class="bulleted">Improved production efficiency by more than 50% by analyzing production and logistics data</li>
+					<li class="bulleted">Mined data from orders for statistical analyses, sales forecasting, and preparing reports for production, marketing, and sales staff</li>
+					<li class="bulleted">Developed interactive websites to display data and other information, using JavaScript, jQuery, Ruby on Rails, HTML, CSS</li>
+					<li class="bulleted">Created relational databases using Ruby on Rails and SQL, ensured security of information, provided information to stakeholders </li>
+					<li class="bulleted">Engaged in database management, Search Engine Optimization (SEO), and website traffic analyses</li>
+					<li class="bulleted">Prepared graphics for advertisements, product images, interactive custom product builders, using Adobe Photoshop, Illustrator</li>
+				</ul>
+			</div>
+			<div class="subsection">
+				<h3 class="main_item">Project Coordinator</h3>
+				<span class="submain">A.T. Still University – Kirksville College of Osteopathic Medicine</span>
+				<span class="date">
+					<span class="start_date">May 2007</span>
+					<span> - </span>
+					<span class="end_date">July 2008</span>
+				</span>
+				<ul>
+					<li class="bulleted">Produced statistical model, conducted various educational assessments, and ensured inter-rater reliability for use by administrators</li>
+					<li class="bulleted">Helped meet and exceed grant objectives by creating evidence-based medicine website and instructional materials</li>
+					<li class="bulleted">Performed database management using SQL for achievement-based, pedagogical, and survey data from various sources</li>
+					<li class="bulleted">Organized educational workshops on evidence-based medicine for students and faculty, handling administrative requirements</li>
+				</ul>
+			</div>
+			<div class="subsection">
 				 <h3 class="main_item">Data Specialist</h3>
 				 <span class="submain">A.T. Still University – Kirksville College of Osteopathic Medicine</span>
 				 <span class="date">
@@ -199,8 +192,8 @@
 					 <li class="bulleted">Aided students and faculty in the effective use of professional video, audio, and graphics software</li>
 				 </ul>
 			 </div>
-		  </section>
- 		 <section id="education">
+		</section>
+ 		<section id="education">
  			 <h2 class="header">Education</h2>
  			 <div class="subsection">
  				 <h3 class="main_item">University of California, Merced</h3>
@@ -224,7 +217,7 @@
  					 <li class="bulleted">Minor in <b>Statistical Methods</b></li>
  					 <li class="bulleted">Minor in <b>Computer Science</b></li>
  				 </ul>
- 			 </div>
- 		 </section>
-	  </body>
+ 			</div>
+		</section>
+	</body>
 </html>
