--- a/3D Animated Music Video Clips Gallery.html
+++ b/3D Animated Music Video Clips Gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>  
+<html lang="en">
 	<head>
 		<title>Raymond G. Feilner, Jr.'s 3D Animated Music Video Clips Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
