Update Reflection and Refraction Art Gallery.html

--- a/Reflection and Refraction Art Gallery.html
+++ b/Reflection and Refraction Art Gallery.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>  
+<html lang="en">
 	<head>
 		<title>Raymond G. Feilner, Jr.'s Reflection and Refraction Art Gallery</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
