--- a/3D Animated Music Video Clips Gallery.html
+++ b/3D Animated Music Video Clips Gallery.html
@@ -52,11 +52,13 @@
 			</a>
 		</section>
 	     	<h2 class="subheader">3D Animated Music Video Clips Gallery</h2>
-		<iframe width="100%" height="50%" src="https://www.youtube.com/embed/XWBGehtmpL8" title="Pyromaniac Symphony - YouTube Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<h2 class="subheader">Pyromaniac Symphony</h2>
 		<section class="details">
 			<div>3D animation, music, and vocals produced by Raymond G. Feilner, Jr.</div>
 			<div>Inspired by the playful melodies of the crackles and dancing of the luminous embers of a warm campfire while adventuring in the forest.</div>
 		</section>
+		<div class="youtube_video_container">
+			<iframe width="100%" height="50%" src="https://www.youtube.com/embed/XWBGehtmpL8" title="Pyromaniac Symphony - YouTube Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+		<div>
 	</body>  
 </html>
