Update 3D Animated Music Video Clips Gallery.html

--- a/3D Animated Music Video Clips Gallery.html
+++ b/3D Animated Music Video Clips Gallery.html
@@ -58,7 +58,7 @@
 			<div>Inspired by the playful melodies of the crackles and dancing of the luminous embers of a warm campfire while adventuring in the forest.</div>
 		</section>
 		<div class="youtube_video_container">
-			<iframe width="100%" height="50%" src="https://www.youtube.com/embed/XWBGehtmpL8" title="Pyromaniac Symphony - YouTube Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+			<iframe src="https://www.youtube.com/embed/XWBGehtmpL8" title="Pyromaniac Symphony - YouTube Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
 		<div>
 	</body>  
 </html>
