--- a/index.html
+++ b/index.html
@@ -15,6 +15,14 @@
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
 		<!--<script src="main.js"></script>-->
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6ZXZZV2NW"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-L6ZXZZV2NW');
+		</script>
 	</head>
 	<body>
 		<!-- Name Logo -->
