--- a/Raymond G Feilner Jr - CV.html
+++ b/Raymond G Feilner Jr - CV.html
@@ -21,6 +21,15 @@
 
 		<script src="main.js"></script>
 
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+		<script async src="https://www.googletagmanager.com/gtag/js?id=G-L6ZXZZV2NW"></script>
+		<script>
+			window.dataLayer = window.dataLayer || [];
+			function gtag(){dataLayer.push(arguments);}
+			gtag('js', new Date());
+			gtag('config', 'G-L6ZXZZV2NW');
+		</script>
+
 	</head>
      <body>
 		 <section id="header">
