--- a/index.html
+++ b/index.html
@@ -34,28 +34,28 @@
 		</section>
 		<!-- Icon Menu -->
 		<section class="icon_menu">
-			<a id="home" class="menu_icon" href="index.html">
+			<a id="menu-home" class="menu_icon" href="index.html">
 				<img src="home.png" alt="Homepage">
 			</a>
-			<a id="animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
+			<a id="menu-animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
 				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 			</a>
-			<a id="photo_editing" class="menu_icon" href="Photo Editing Gallery.html">
+			<a id="menu-photo-editing" class="menu_icon" href="Photo Editing Gallery.html">
 				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
 			</a>
-			<a id="album_covers" class="menu_icon" href="Album Covers Gallery.html">
+			<a id="menu-album-covers" class="menu_icon" href="Album Covers Gallery.html">
 				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
 			</a>
-			<a id="surreal" class="menu_icon" href="Surreal Art Gallery.html">
+			<a id="menu-surreal" class="menu_icon" href="Surreal Art Gallery.html">
 				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
 			</a>
-			<a id="glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
+			<a id="menu-glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
 				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
 			</a>
-			<a id="experimental" class="menu_icon" href="Experimental Gallery.html">
+			<a id="menu-experimental" class="menu_icon" href="Experimental Gallery.html">
 				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
 			</a>
-			<a id="notebook_paper" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
+			<a id="menu-resume" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
 				<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
 			</a>
 		</section>
@@ -104,27 +104,27 @@
 			<h2 class="header">Multimedia Art Portfolio Gallery Links</h2>
 			<p>Click on an image below to view the associated gallery.</p>
 
-			<a id="animation" class="thumbnail" href="3D Animated Music Video Clips Gallery.html">
+			<a id="thumbnail-animation" class="thumbnail" href="3D Animated Music Video Clips Gallery.html">
 				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 			</a>
 
-			<a id="photo_editing" class="thumbnail" href="Photo Editing Gallery.html">
+			<a id="thumbnail-photo-editing" class="thumbnail" href="Photo Editing Gallery.html">
 				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
 			</a>
 
-			<a id="album_covers" class="thumbnail" href="Album Covers Gallery.html">
+			<a id="thumbnail-album-covers" class="thumbnail" href="Album Covers Gallery.html">
 				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
 			</a>
 
-			<a id="surreal" class="thumbnail" href="Surreal Art Gallery.html">
+			<a id="thumbnail-surreal" class="thumbnail" href="Surreal Art Gallery.html">
 				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
 			</a>
 
-			<a id="glass" class="thumbnail" href="Reflection and Refraction Art Gallery.html">
+			<a id="thumbnail-glass" class="thumbnail" href="Reflection and Refraction Art Gallery.html">
 				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
 			</a>
 
-			<a id="experimental" class="thumbnail" href="Experimental Gallery.html">
+			<a id="thumbnail-experimental" class="thumbnail" href="Experimental Gallery.html">
 				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
 			</a>
 		</section>
