Update 3D Animated Music Video Clips Gallery.html

--- a/3D Animated Music Video Clips Gallery.html
+++ b/3D Animated Music Video Clips Gallery.html
@@ -67,6 +67,6 @@
 		</section>
 		<div class="youtube_video_container">
 			<iframe src="https://www.youtube.com/embed/XWBGehtmpL8" title="Pyromaniac Symphony - YouTube Video Player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-		<div>
+		</div>
 	</body>  
 </html>
