--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Portfolio"/>
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Portfolio and Resume"/>
-		<link rel="icon" href="icon.ico" type="image/x-icon">
+		<link rel="icon" href="favicon.ico" type="image/x-icon">
 		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Resume, CV, Art, Multimedia, Surreal, Album Covers, Logos, Photo Editing, Experimental, Autosetereoscopes, Blender, Photoshop, Gimp, Inkscape, Illustrator, 3D Animated Music Videos">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
