--- a/index.html
+++ b/index.html
@@ -27,76 +27,77 @@
 	<body>
 		<!-- Name Logo -->
 		<section id="header">
-			<!--<h1 id="my_name" class="name">Raymond G. Feilner, Jr.</h1>-->
-			<span id="name_logo" class="logo">
-				<img src="Raymond Feilner - Logo-5.png" alt="Raymond G. Feilner, Jr.">
+			<!--<h1 id="my-name" class="name">Raymond G. Feilner, Jr.</h1>-->
+			<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>
+			<span id="name-logo" class="logo">
+				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
 		</section>
 		<!-- Icon Menu -->
-		<section class="icon_menu">
-			<a id="menu-home" class="menu_icon" href="index.html">
+		<section class="icon-menu">
+			<a id="menu-home" class="menu-icon" href="index.html">
 				<img src="home.png" alt="Homepage">
 			</a>
-			<a id="menu-animation" class="menu_icon" href="3D Animated Music Video Clips Gallery.html">
+			<a id="menu-animation" class="menu-icon" href="animation.html">
 				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 			</a>
-			<a id="menu-photo-editing" class="menu_icon" href="Photo Editing Gallery.html">
-				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
+			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
+				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
 			</a>
-			<a id="menu-album-covers" class="menu_icon" href="Album Covers Gallery.html">
-				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
+			<a id="menu-album-covers" class="menu-icon" href="cover-art.html">
+				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Cover Art and Logos Gallery">
 			</a>
-			<a id="menu-surreal" class="menu_icon" href="Surreal Art Gallery.html">
+			<a id="menu-surreal" class="menu-icon" href="surreal.html">
 				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
 			</a>
-			<a id="menu-glass" class="menu_icon" href="Reflection and Refraction Art Gallery.html">
+			<a id="menu-glass" class="menu-icon" href="reflections.html">
 				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
 			</a>
-			<a id="menu-experimental" class="menu_icon" href="Experimental Gallery.html">
+			<a id="menu-experimental" class="menu-icon" href="experimental.html">
 				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
 			</a>
-			<a id="menu-resume" class="menu_icon" href="Raymond G Feilner Jr - Resume.html">
-				<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+			<a id="menu-resume" class="menu-icon" href="resume.html">
+				<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume">
 			</a>
 		</section>
 
 		<!-- Spacing image with scroll command -->
-		<div id="down_parallax" class="parallax"></div>
+		<div id="down-parallax" class="parallax"></div>
 
-		<a href="3D Animated Music Video Clips Gallery.html">
+		<a href="animation.html">
 			<h2 class="subheader">3D Animated Music Video Clips Gallery</h2>
-			<div id="animation_parallax_1" class="parallax"></div>
-			<img class="no_parallax" src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+			<div id="animation-parallax-1" class="parallax"></div>
+			<img class="no-parallax" src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 		</a>
 
-		<a href="Photo Editing Gallery.html">
-			<h2 class="subheader">Photo Editing Gallery</h2>
-			<div id="photo_editing_parallax_1" class="parallax"></div>
-			<img class="no_parallax" src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
+		<a href="image-editing.html">
+			<h2 class="subheader">Image Editing Gallery</h2>
+			<div id="photo-editing-parallax-1" class="parallax"></div>
+			<img class="no-parallax" src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
 		</a>
 
-		<a href="Album Covers Gallery.html">
-			<h2 class="subheader">Album Covers and Logos Gallery</h2>
-			<div id="album_covers_parallax_1" class="parallax"></div>
-			<img class="no_parallax" src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
+		<a href="cover-art.html">
+			<h2 class="subheader">Cover Art and Logos Gallery</h2>
+			<div id="album-covers-parallax-1" class="parallax"></div>
+			<img class="no-parallax" src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Cover Art and Logos Gallery">
 		</a>
 
-		<a href="Surreal Art Gallery.html">
+		<a href="surreal.html">
 			<h2 class="subheader">Surreal Art Gallery</h2>
-			<div id="surreal_parallax_1" class="parallax"></div>
-			<img class="no_parallax" src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+			<div id="surreal-parallax-1" class="parallax"></div>
+			<img class="no-parallax" src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
 		</a>
 
-		<a href="Reflection and Refraction Art Gallery.html">
+		<a href="reflections.html">
 			<h2 class="subheader">Explorations of Reflections and Refractivity Gallery</h2>
-			<div id="glass_parallax_1" class="parallax"></div>
-			<img class="no_parallax" src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+			<div id="glass-parallax-1" class="parallax"></div>
+			<img class="no-parallax" src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
 		</a>
 
-		<a href="Experimental Gallery.html">
+		<a href="experimental.html">
 			<h2 class="subheader">Experimental Gallery</h2>
-			<div id="experimental_parallax_1" class="parallax"></div>
-			<img class="no_parallax" src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+			<div id="experimental-parallax-1" class="parallax"></div>
+			<img class="no-parallax" src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
 		</a>
 
 		<!-- Clickable thumbnails -->
@@ -104,35 +105,35 @@
 			<h2 class="header">Multimedia Art Portfolio Gallery Links</h2>
 			<p>Click on an image below to view the associated gallery.</p>
 
-			<a id="thumbnail-animation" class="thumbnail" href="3D Animated Music Video Clips Gallery.html">
+			<a id="thumbnail-animation" class="thumbnail" href="animation.html">
 				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
 			</a>
 
-			<a id="thumbnail-photo-editing" class="thumbnail" href="Photo Editing Gallery.html">
+			<a id="thumbnail-photo-editing" class="thumbnail" href="image-editing.html">
 				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Photo Editing Gallery">
 			</a>
 
-			<a id="thumbnail-album-covers" class="thumbnail" href="Album Covers Gallery.html">
+			<a id="thumbnail-album-covers" class="thumbnail" href="cover-art.html">
 				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Album Covers Gallery">
 			</a>
 
-			<a id="thumbnail-surreal" class="thumbnail" href="Surreal Art Gallery.html">
+			<a id="thumbnail-surreal" class="thumbnail" href="surreal.html">
 				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
 			</a>
 
-			<a id="thumbnail-glass" class="thumbnail" href="Reflection and Refraction Art Gallery.html">
+			<a id="thumbnail-glass" class="thumbnail" href="reflections.html">
 				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
 			</a>
 
-			<a id="thumbnail-experimental" class="thumbnail" href="Experimental Gallery.html">
+			<a id="thumbnail-experimental" class="thumbnail" href="experimental.html">
 				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
 			</a>
 		</section>
 		<section id="resume">
-			<a href="Raymond G Feilner Jr - Resume.html">
+			<a href="resume.html">
 				<h2 class="header">Resume</h2>
-				<span id="notebook_paper" class="icon">
-					<img src="Paper-50x66.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
+				<span id="notebook-paper" class="icon">
+					<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume Icon">
 				</span>
 				<span class="message">Click here to view a list of some of my professional accomplishments.</span>
 			</a>
