--- a/animation.html
+++ b/animation.html
@@ -28,7 +28,7 @@
 		<!-- Name Logo -->
 		<section id="header">
 			<!--<h1 id="my-name" class="name">Raymond G. Feilner, Jr.</h1>-->
-			<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>
+			<!--<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>-->
 			<span id="name-logo" class="logo">
 				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
@@ -60,7 +60,7 @@
 				<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume">
 			</a>
 		</section>
-		<h2 class="subheader">3D Animated Music Video Clips Gallery</h2>
+		<h1 class="subheader">3D Animated Music Video Clips Gallery</h1>
 		<h2 class="subheader">Pyromaniac Symphony</h2>
 		<!--<section class="details">
 			<div>3D animation, music, and vocals produced by Raymond G. Feilner, Jr.</div>
