--- a/image-editing.html
+++ b/image-editing.html
@@ -28,7 +28,7 @@
 		<!-- Name Logo -->
 		<section id="header">
 			<!--<h1 id="my-name" class="name">Raymond G. Feilner, Jr.</h1>-->
-			<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>
+			<!--<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>-->
 			<span id="name-logo" class="logo">
 				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
