--- a/cover-art.html
+++ b/cover-art.html
@@ -44,8 +44,8 @@
 			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
 				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
 			</a>
-			<a id="menu-album-covers" class="menu-icon" href="cover-art.html">
-				<img src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Cover Art and Logos Gallery">
+			<a id="menu-cover-art" class="menu-icon" href="cover-art.html">
+				<img src="images/cover-art/dare-devil-self-titled.jpg" alt="Cover Art and Logos Gallery">
 			</a>
 			<a id="menu-surreal" class="menu-icon" href="surreal.html">
 				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
@@ -69,19 +69,19 @@
 
 		<h2 class="subheader">Dare Devil - The Blackout EP</h2>
 		<div id="album-covers-parallax-1" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/3. Album Covers/a. Dare Devil - The Blackout EP.png" alt="Dare Devil - The Blackout EP">
+		<img class="no-parallax" src="images/cover-art/dare-devil-blackout.jpg" alt="Dare Devil - The Blackout EP Cover">
 
 		<h2 class="subheader">Dare Devil - Spacebound</h2>
 		<div id="album-covers-parallax-2" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/3. Album Covers/b. Dare Devil - Spacebound.jpg" alt="Dare Devil - Spacebound">
+		<img class="no-parallax" src="images/cover-art/dare-devil-spacebound.jpg" alt="Dare Devil - Spacebound Album Cover">
 
 		<h2 class="subheader">Dare Devil - Self-titled</h2>
 		<div id="album-covers-parallax-3" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/3. Album Covers/c. Dare Devil - Self-titled.jpg" alt="Dare Devil - Self-titled">
+		<img class="no-parallax" src="images/cover-art/dare-devil-self-titled.jpg" alt="Dare Devil - Self-titled Album Cover">
 
      		<h2 class="subheader">99Ninja Logo: Making Your Hand-drawn Picture Come to Life</h2>
 		<div id="album-covers-parallax-4" class="parallax"></div>
-		<img class="no-parallax" src="Multimedia Art Portfolio/3. Album Covers/d. 99Ninja.png" alt="Graphically designed 99Ninja logo to the left. Hand-drawn logo to the right.">
+		<img class="no-parallax" src="Mimages/cover-art/99ninja.jpg" alt="Graphically designed 99Ninja logo to the left. Original hand-drawn logo to the right.">
 
 	</body>  
 </html>  
