--- a/cover-art.html
+++ b/cover-art.html
@@ -6,12 +6,13 @@
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery"/>
 		<meta property="og:type" content="portfolio"/>
 		<meta property="og:url" content="https://rfeilner.github.io"/>
-		<meta property="og:image" content="Raymond Feilner - Logo-5.png"/>
+		<meta property="og:image" content="images/logo.png"/>
 		<meta property="og:site_name" content="Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery"/>
 		<meta property="fb:admins" content="USER_ID"/>
-		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery"/>
-		<link rel="icon" href="favicon.ico" type="image/x-icon">
+		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Cover Art, Album Covers, and Logos Gallery"/>
+		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
 		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Album Covers, Logos, Photo Editing, Blender, Photoshop, Gimp, Inkscape, Illustrator">
+		<meta name="description" content="Raymond G. Feilner, Jr.'s Cover Art, Album Covers, and Logos Gallery">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		<!--<script src="https://code.jquery.com/jquery-latest.js"></script>-->
 		<!--<script src="main.js"></script>-->
@@ -30,34 +31,34 @@
 			<!--<h1 id="my-name" class="name">Raymond G. Feilner, Jr.</h1>-->
 			<!--<h1 id="my-name" class="name screen-reader-text">Raymond G. Feilner, Jr.'s Portfolio'</h1>-->
 			<span id="name-logo" class="logo">
-				<img src="logo.png" alt="Raymond G. Feilner, Jr. logo">
+				<img src="images/logo.png" alt="Raymond G. Feilner, Jr. logo">
 			</span>
 		</section>
 		<!-- Icon Menu -->
 		<section class="icon-menu">
 			<a id="menu-home" class="menu-icon" href="index.html">
-				<img src="home.png" alt="Homepage">
+				<img src="images/home.png" alt="Homepage Link">
 			</a>
 			<a id="menu-animation" class="menu-icon" href="animation.html">
-				<img src="Multimedia Art Portfolio/1. 3D Animated Music Video Clips/a. Pyromaniac Symphony Image.png" alt="3D Animated Music Video Clips Gallery">
+				<img src="images/animation/pyromaniac-symphony.jpg" alt="3D Animated Music Video Clips Gallery Link">
 			</a>
 			<a id="menu-photo-editing" class="menu-icon" href="image-editing.html">
-				<img src="Multimedia Art Portfolio/2. Photo Editing/a. Studly - Antique.png" alt="Image Editing Gallery">
+				<img src="images/image-editing/studly.png" alt="Image Editing Gallery Link">
 			</a>
 			<a id="menu-cover-art" class="menu-icon" href="cover-art.html">
-				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery">
+				<img src="images/cover-art/dare-devil-blackout.jpg" alt="Cover Art and Logos Gallery Link">
 			</a>
 			<a id="menu-surreal" class="menu-icon" href="surreal.html">
-				<img src="Multimedia Art Portfolio/4. Surreal Art/a. Dead Teddy.png" alt="Surreal Art Gallery">
+				<img src="images/surreal/mortality.png" alt="Surreal Art Gallery Link">
 			</a>
 			<a id="menu-glass" class="menu-icon" href="reflections.html">
-				<img src="Multimedia Art Portfolio/5. Glass Art/a. Glass Florette.png" alt="Reflection and Refraction Art Gallery">
+				<img src="images/reflections/serenity.png" alt="Reflection and Refraction Art Gallery Link">
 			</a>
 			<a id="menu-experimental" class="menu-icon" href="experimental.html">
-				<img src="Multimedia Art Portfolio/6. Experimental/a. Magic Eye - Autostereoscope Example - Moon.png" alt="Experimental Gallery">
+				<img src="images/experimental/autostereoscope-moon.png" alt="Experimental Gallery Link">
 			</a>
 			<a id="menu-resume" class="menu-icon" href="resume.html">
-				<img src="paper.png" alt="Raymond G. Feilner, Jr.'s Resume">
+				<img src="images/paper.png" alt="Raymond G. Feilner, Jr.'s Resume Link">
 			</a>
 		</section>
 
@@ -69,19 +70,19 @@
 
 		<h2 class="subheader">Dare Devil - The Blackout EP</h2>
 		<div id="album-covers-parallax-1" class="parallax"></div>
-		<img class="no-parallax" src="images/cover-art/dare-devil-blackout.jpg" alt="Dare Devil - The Blackout EP Cover">
+		<img class="no-parallax" src="images/cover-art/dare-devil-blackout.jpg" alt="Dare Devil - The Blackout EP Cover: The artist's name, Dare Devil, written with a lunar landscape font on a black background with a hazy white border above the EP's title, The Blackout EP written with a silver bevelled font.">
 
 		<h2 class="subheader">Dare Devil - Spacebound</h2>
 		<div id="album-covers-parallax-2" class="parallax"></div>
-		<img class="no-parallax" src="images/cover-art/dare-devil-spacebound.jpg" alt="Dare Devil - Spacebound Album Cover">
+		<img class="no-parallax" src="images/cover-art/dare-devil-spacebound.jpg" alt="Dare Devil - Spacebound Album Cover: The artist's name, Dare Devil, written with a lunar landscape font on a background consisting of a quasar above the album title, Spacebound.">
 
 		<h2 class="subheader">Dare Devil - Self-titled</h2>
 		<div id="album-covers-parallax-3" class="parallax"></div>
-		<img class="no-parallax" src="images/cover-art/dare-devil-self-titled.jpg" alt="Dare Devil - Self-titled Album Cover">
+		<img class="no-parallax" src="images/cover-art/dare-devil-self-titled.jpg" alt="Dare Devil - Self-titled Album Cover: The artist's name, Dare Devil, written with a black graffiti font on a grainy closeup of a profile of the artist's face with a blurred beach in the background.">
 
      		<h2 class="subheader">99Ninja Logo: Making Your Hand-drawn Picture Come to Life</h2>
 		<div id="album-covers-parallax-4" class="parallax"></div>
-		<img class="no-parallax" src="images/cover-art/99ninja.jpg" alt="Graphically designed 99Ninja logo to the left. Original hand-drawn logo to the right.">
+		<img class="no-parallax" src="images/cover-art/99ninja.jpg" alt="Graphically designed 99Ninja logo to the left. Original hand-drawn logo to the right. The 9's are used to emulate visages of blue and red ninjas.">
 
 	</body>  
 </html>  
