--- a/cover-art.html
+++ b/cover-art.html
@@ -2,6 +2,10 @@
 <html lang="en">
 	<head>
 		<title>Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery</title>
+		<meta charset="UTF-8">
+		<meta name="description" content="Raymond G. Feilner, Jr.'s Cover Art, Album Covers, and Logos Gallery">
+		<meta name="keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Album Covers, Logos, Photo Editing, Blender, Photoshop, Gimp, Inkscape, Illustrator">
+		<meta name="author" content="Raymond G. Feilner, Jr.">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta property="og:title" content="Raymond G. Feilner, Jr.'s Album Covers and Logos Gallery"/>
 		<meta property="og:type" content="portfolio"/>
@@ -11,8 +15,6 @@
 		<meta property="fb:admins" content="USER_ID"/>
 		<meta property="og:description" content="Raymond G. Feilner, Jr.'s Cover Art, Album Covers, and Logos Gallery"/>
 		<link rel="icon" href="images/favicon.ico" type="image/x-icon">
-		<meta name="Keywords" content="Raymond G Feilner Jr, Portfolio, Art, Multimedia, Album Covers, Logos, Photo Editing, Blender, Photoshop, Gimp, Inkscape, Illustrator">
-		<meta name="description" content="Raymond G. Feilner, Jr.'s Cover Art, Album Covers, and Logos Gallery">
 		<link href="main.css" rel="stylesheet" type="text/css"/>
 		<script src="https://code.jquery.com/jquery-latest.js"></script>
 		<script src="main.js"></script>
